# terminal-minigames

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: block_breaker.cpp  block_breaker.h  main.cpp  main_menu.cpp  main_menu.h  snake_game.cpp  snake_game.h
src/util/: util.cpp  util.h  vector2d.cpp  vector2d.h
